Preventing wrapping of buttons in the top toolbar, this will need to be accompanied by new feature to allow js scrolling of these on smaller devices (hopefully touch/swipe gestures on iPad)

--- a/Plugins/ViperToolbarPlugin/ViperToolbarPlugin.css
+++ b/Plugins/ViperToolbarPlugin/ViperToolbarPlugin.css
@@ -20,9 +20,9 @@
     border-top-color: #A2A1A8;
     border-bottom-color: #2B2B2B;
     color: #2b2b2b;
-
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
     -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+    white-space: nowrap;
 }
 .ViperTP-bar.device-ipad {
 /*     font-size: 13px; */
